# foot-info

./: .gitattributes  .gitignore  Cargo.toml  GEMINI.md  LICENSE  README.md  tui_err.txt
.github/workflows/: release.yml
app/: .gitignore  pubspec.yaml
app/android/app/: build.gradle.kts
app/android/app/src/main/: AndroidManifest.xml
app/lib/: main.dart  router.dart  theme.dart
app/lib/components/: country_picker.dart  error_display.dart  loading_indicator.dart  match_card.dart  search_bar.dart  top_match_card.dart
app/lib/models/: view_models.dart
app/lib/pages/: search_page.dart  settings_page.dart  top_matches_page.dart
app/lib/providers/: search_provider.dart  settings_provider.dart  top_matches_provider.dart
app/lib/src/rust/: frb_generated.dart  frb_generated.io.dart  frb_generated.web.dart
app/lib/src/rust/api/: simple.dart
app/rust/: Cargo.toml  build_log.txt
app/rust/src/: frb_generated.rs
app/rust/src/api/: simple.rs
app/rust_builder/cargokit/build_tool/lib/src/: android_environment.dart
core/: Cargo.toml
core/src/: client.rs  error.rs  lib.rs  models.rs
core/src/providers/: league_stats.rs  mod.rs  wheresthematch.rs  worldsoccertalk.rs
core/tests/: league_stats_tests.rs  livesoccertv_tests.rs  matchstv_tests.rs  wheresthematch_tests.rs  worldsoccertalk_tests.rs
core/tests/resources/: livesoccertv.html  livesoccertv_league.html  matchstv.html  wheresthematch.html  worldsoccertalk.html
src/: app.rs  client.rs  error.rs  handler.rs  lib.rs  main.rs  models.rs  state.rs  theme.rs  ui.rs  user.rs
src/handlers/: mod.rs  top_matches.rs
src/providers/: livesoccertv.rs  matchstv.rs  mock_us.rs  mod.rs  wheresthematch.rs  worldsoccertalk.rs
src/ui/: layout.rs  mod.rs  render.rs  theme.rs
src/ui/components/: match_list.rs  mod.rs  search_bar.rs  status_bar.rs  top_matches_list.rs
src/ui/views/: mod.rs
tests/: handler_tests.rs  livesoccertv_tests.rs  matchstv_tests.rs  state_tests.rs  worldsoccertalk_tests.rs
tests/providers/: wheresthematch_tests.rs
tests/resources/: livesoccertv.html  matchstv.html  wheresthematch.html
tests/ui/: components.rs  layout.rs  render.rs  views.rs
tui/: Cargo.toml
tui/src/: app.rs  config.rs  lib.rs  main.rs  models.rs  state.rs
tui/src/handlers/: league.rs  mod.rs  search.rs  top_matches.rs
tui/src/ui/: render.rs
tui/src/ui/components/: league_fixtures.rs  league_scorers.rs  league_table.rs  match_list.rs  mod.rs  top_matches_list.rs
tui/src/ui/views/: league.rs  mod.rs  search.rs  top_matches.rs
tui/tests/: handler_tests.rs  state_tests.rs
tui/tests/ui/: components.rs  layout.rs  main.rs  render.rs  views.rs
