[package]
name = "foot-info"
version = "0.1.0"
description = "Upcoming football tv chanels coverage and lineups"
authors = ["Alin1233 <herciualin10@gmail.com>"]
license = "MIT"
edition = "2024"

[dependencies]
color-eyre = "0.6.3"
crossterm = "0.29.0"
ratatui = "0.30.0"
reqwest = { version = "0.11", features = ["json", "blocking"] }
scraper = "0.19.0"
tokio = { version = "1", features = ["full"] }
chrono = "0.4"
chrono-tz = "0.8"
thiserror = "1.0"

# Read the optimization guideline for more details: https://ratatui.rs/recipes/apps/release-your-app/#optimizations
[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
strip = true